--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header{
+    background-color: black;
+    color: white;
+    height: 100vh;
+    width: 20vh;
+}
