--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ main{
     display: flex;
 }
 
+main > div.banner{
+    height: 100px;
+    width: 100%; 
+    background-color: 0rgba(0,0,0,3);
+    position: fixed;
+}
+
 p{
     font-size: 3rem;
     padding: 5rem;
@@ -64,12 +71,6 @@ div.container1 ul{
     list-style-type: none;
     display: flex;
     flex-direction: column;
-}
-
-div.banner{
-    display: inline;
-    flex-direction: row;
-    margin-left: 1rem;
 }
 
 nav.nav3 li{
