--- a/style.css
+++ b/style.css
@@ -31,11 +31,18 @@ main{
     display: flex;
 }
 
-main > div.banner{
+footer{
+    background-color: #282828;
     height: 100px;
+    display: flex;
+}
+
+main > div.banner{
+    height: 70px;
     width: 100%; 
-    background-color: 0rgba(0,0,0,3);
+    background-color: #080b12;
     position: fixed;
+    opacity: 0.5;
 }
 
 main > div.header-of-main{
@@ -44,14 +51,8 @@ main > div.header-of-main{
 }
 
 p{
-    font-size: 3rem;
-    padding: 5rem;
-}
-
-footer{
-    background-color: #282828;
-    height: 100px;
-    display: flex;
+    font-size: 1rem;
+    padding: 3rem;
 }
 
 footer > div.song-name{
@@ -100,6 +101,12 @@ nav.nav3 li{
 
 ul.ul3 li{
     padding: 1rem;
+}
+
+ul.ul3{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 @media screen and (max-width: 576px) {
