--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header{
 
 header,
 main{
-    height: calc(100vh - 100px);
+    height: calc(100vh - 80px);
 }
 
 main{
@@ -33,7 +33,7 @@ main{
 
 footer{
     background-color: #282828;
-    height: 100px;
+    height: 80px;
     display: flex;
 }
 
@@ -47,7 +47,8 @@ main > div.banner{
 
 main > div.header-of-main{
     height: 100px;
-    width: 100%; 
+    width: 100%;
+    padding-top: 70px;
 }
 
 button#button-upgrade{
@@ -56,6 +57,7 @@ button#button-upgrade{
     background-color: #080b12;
     padding: .5rem 1.5rem;
     opacity: 1;
+    position: sticky;
 }
 
 p{
@@ -79,14 +81,17 @@ footer > div.play-bar{
 
 h1{
     color: white;
+    padding: 1rem;
 }
 
 li.li-item{
     color: #6b6b6b;
+    padding: 5px;
 }
 
 li.li-title{
     color: white;
+    padding: 5px;
 }
 
 div.container1{
@@ -107,14 +112,19 @@ nav.nav3 li{
     list-style-type: none;
 }
 
-ul.ul3 li{
+ul.ul3 > li{
     padding: 1rem;
+    font-size: small;
 }
 
 ul.ul3{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+}
+
+nav.nav2{
+    padding-top: 1rem;
 }
 
 @media screen and (max-width: 576px) {
